plugins {
    id 'com.android.library'
    id 'maven-publish'
}

repositories {
    mavenCentral()
    google()
}

android {
    namespace = 'io.approov.service.volley'
    compileSdk 34

    defaultConfig {
        minSdkVersion 23
        targetSdkVersion 34
    }

    buildTypes {
        release {
            minifyEnabled false
            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
        }
    }
    compileOptions {
        sourceCompatibility JavaVersion.VERSION_1_8
        targetCompatibility JavaVersion.VERSION_1_8
    }
    testOptions {
        unitTests {
            includeAndroidResources = false
            returnDefaultValues = true
        }
        unitTests.all {
            jvmArgs '-Dnet.bytebuddy.experimental=true'
        }
    }
}

configurations {
    testImplementation {
        exclude group: 'io.approov', module: 'approov-android-sdk'
    }
}

dependencies {
    implementation 'com.android.volley:volley:1.2.1'
    implementation 'com.squareup.okhttp3:okhttp:4.12.0'
    implementation 'io.approov:approov-android-sdk:3.5.3'
    implementation 'org.bouncycastle:bcprov-jdk15to18:1.80'
    implementation 'androidx.annotation:annotation-jvm:1.9.1'
    testImplementation 'junit:junit:4.13.2'
    testImplementation 'org.mockito:mockito-inline:5.2.0'
    if (findProject(':approov-sdk') != null) {
        testImplementation project(':approov-sdk')
    }
    if (findProject(':test-support') != null) {
        testImplementation project(':test-support')
    }
    testImplementation 'org.robolectric:robolectric:4.11.1'
    testImplementation 'org.json:json:20231013'
    testImplementation 'androidx.test:core:1.6.1'
}
